--- a/projectCfg/mainController.ini
+++ b/projectCfg/mainController.ini
@@ -76,7 +76,7 @@
 
     ;                   calibration         clt             decoder         ignition        advmap-tps      dwellmap        fueling         vemap-tps       vemap-map       afrtgtTPS       afrtgtMAP       accelcompTPS    accelcompMAP    warmupcomp      inj_timing      inj_phase       crankingfuel    baro            chargetemp      tuareg          tach            syslog          faultlog
    pageIdentifier      = "\x30\x31",        "\x30\x32",     "\x30\x33",     "\x30\x34",     "\x30\x35",     "\x30\x36",     "\x30\x37",     "\x30\x38",     "\x30\x39",     "\x31\x30",     "\x31\x31",     "\x31\x32",     "\x31\x33",     "\x31\x34",     "\x31\x35",     "\x31\x36",     "\x31\x37",     "\x31\x38",     "\x31\x39",     "\x32\x30",     "\x32\x31",     "\x32\x32",     "\x32\x33"
-   pageSize            = 118,               64,             15,             16,             320,            64,             49,             320,            320,            320,            320,            64,             64,             64,             64,             64,             64,             64,             320,            58,             64,             210,            7
+   pageSize            = 118,               64,             19,             16,             320,            64,             60,             320,            320,            320,            320,            64,             64,             64,             64,             64,             64,             64,             320,            58,             64,             210,            7
 
    burnCommand         = "B",               "B",            "B",            "B",            "B",            "B",            "B",            "B",            "B",            "B",            "B",            "B",            "B",            "B",            "B",            "B",            "B",            "B",            "B",            "B",            "B",            "",             ""
    pageActivate        = "P%2i",            "P%2i",         "P%2i",         "P%2i",         "P%2i",         "P%2i",         "P%2i",         "P%2i",         "P%2i",         "P%2i",         "P%2i",         "P%2i",         "P%2i",         "P%2i",         "P%2i",         "P%2i",         "P%2i",         "P%2i",         "P%2i",         "P%2i",         "P%2i",         "P%2i",         "P%2i"
@@ -200,7 +200,9 @@ page = 3
     DecCisTriggeredPhase= bits,   U08,      nextOffset,  [0:7], $PHASELABELS
     DecCisMinAngle      = scalar, U08,      nextOffset,  "deg",        1, 0,   5, 100, 0
     DecCisSyncThres     = scalar, U08,      nextOffset,  "#",        1, 0,   2, 200, 0
-    ; size := 15
+
+    DecAccelFilterCoeff = scalar, F32,      nextOffset,  "",   1, 0,  0, 1, 2
+    ; size := 19
 
 ;--------------------------------------------------
 ; Ignition Setup
@@ -267,8 +269,11 @@ page = 7
     FuelingSetupInjMaxDc                    = scalar, U08,      nextOffset,     "%",    1, 0,  0, 255, 0
 
     ;legacy AE
-    FuelingSetupAccelCompThresTPS           = scalar, F32,      nextOffset,     "°/s",    1, 0,  10, 2500, 1
-    FuelingSetupAccelCompThresMAP           = scalar, F32,      nextOffset,     "kPa/s",    1, 0,  10, 2500, 1
+    FuelingSetupAccelCompThresTPSlow        = scalar, F32,      nextOffset,     "°/s",    1, 0,  10, 2500, 1
+    FuelingSetupAccelCompThresTPShigh       = scalar, F32,      nextOffset,     "°/s",    1, 0,  10, 2500, 1
+    FuelingSetupAccelCompThresMAPlow        = scalar, F32,      nextOffset,     "kPa/s",    1, 0,  10, 2500, 1
+    FuelingSetupAccelCompThresMAPhigh       = scalar, F32,      nextOffset,     "kPa/s",    1, 0,  10, 2500, 1
+    FuelingSetupAccelCompThresRpm           = scalar, U16,      nextOffset,     "rpm",    1, 0,  0, 10000, 0
     FuelingSetupDecelCompThresTPS           = scalar, F32,      nextOffset,     "°/s",    1, 0,  -2500, -10, 1
     FuelingSetupDecelCompThresMAP           = scalar, F32,      nextOffset,     "kPa/s",    1, 0,  -2500, -10, 1
 
@@ -283,7 +288,7 @@ page = 7
     FuelingSetupAccelCompTaperThres         = scalar, U08,      nextOffset,     "cyc",    1, 0,  0, 255, 0
 
     FuelingSetupAsCompPct                   = scalar, U08,      nextOffset,     "%",    1, 0,  0, 255, 0
-    FuelingSetupAsCompCyc                   = scalar, U08,      nextOffset,     "cyc",    1, 0,  0, 255, 0
+    FuelingSetupAsCompCyc                   = scalar, U16,      nextOffset,     "cyc",    1, 0,  0, 60000, 0
     FuelingSetupAsCompThres                 = scalar, U16,      nextOffset,     "K",    1, 0,  0, 500, 0
 
     FuelingSetupSPDmin                      = scalar, U16,      nextOffset,      "rpm",  1, 0,  0, 9000, 0
@@ -298,7 +303,7 @@ page = 7
     FuelingSetupFeatASE                     = bits,   U08,      lastOffset, [4:4], $ONOFFLABELS
     FuelingSetupFeatDryCrank                = bits,   U08,      lastOffset, [5:5], $ONOFFLABELS
     FuelingSetupFeatBAROComp                = bits,   U08,      lastOffset, [6:6], $ONOFFLABELS
-    ;size = 51
+    ;size = 60
 
 
 ;--------------------------------------------------
@@ -308,7 +313,7 @@ page = 8
 
     fuelVE_TPS_x  = array,  U16,   0,  [16],      "Rpm",  1.0,    0.0,   100, 10000,  0
     fuelVE_TPS_y  = array,  U16,   32, [16],      "TPS",  1.0,    0.0,   5.0, 90.0,   0
-    fuelVE_TPS_z  = array,  U08,   64, [16x16],   "prc",  1.0,    0.0,   0.0, 100.0,  0
+    fuelVE_TPS_z  = array,  U08,   64, [16x16],   "prc",  0.5,    0.0,   0.0, 125.0,  1
 
 
 
@@ -319,7 +324,7 @@ page = 9
 
     fuelVE_MAP_x  = array,  U16,   0,  [16],      "Rpm",  1.0,    0.0,   100, 10000,  0
     fuelVE_MAP_y  = array,  U16,   32, [16],      "MAP",  1.0,    0.0,   30.0, 110.0,   0
-    fuelVE_MAP_z  = array,  U08,   64, [16x16],   "prc",  1.0,    0.0,   0.0, 100.0,  0
+    fuelVE_MAP_z  = array,  U08,   64, [16x16],   "prc",  0.5,    0.0,   0.0, 125.0,  1
 
 
 
@@ -331,7 +336,7 @@ page = 10
 ;   name           = class, type, offset, shape,   units, scale, translate, lo, high, digits
     fuelAFR_TPS_x  = array,  U16,   0,  [16],      "Rpm",  1.0,    0.0,   100, 10000,  0
     fuelAFR_TPS_y  = array,  U16,   32, [16],      "TPS",  1.0,    0.0,   5.0, 90.0,   0
-    fuelAFR_TPS_z  = array,  U08,   64, [16x16],   "AFR",  0.1,    0.0,   0.0, 25.0,   1
+    fuelAFR_TPS_z  = array,  U08,   64, [16x16],   "AFR",  0.1,    0.0,   3.0, 30.0,   1
 
 
 
@@ -343,7 +348,7 @@ page = 11
 ;   name           = class, type, offset, shape,   units, scale, translate, lo, high, digits
     fuelAFR_MAP_x  = array,  U16,   0,  [16],      "Rpm",  1.0,    0.0,   100, 10000,   0
     fuelAFR_MAP_y  = array,  U16,   32, [16],      "MAP",  1.0,    0.0,   30.0, 110.0,   0
-    fuelAFR_MAP_z  = array,  U08,   64, [16x16],   "AFR",  0.1,    0.0,   0.0, 25.0,    1
+    fuelAFR_MAP_z  = array,  U08,   64, [16x16],   "AFR",  0.1,    0.0,   3.0, 30.0,    1
 
 
 ;--------------------------------------------------
@@ -1165,12 +1170,12 @@ dialog = decoder_setup, "Decoder Setup"
 
     field = "Version", DecoderVersion
     field = "Timeout", DecTimeout
+    field = "Acceleration filter coefficient", DecAccelFilterCoeff
     panel = decoder_crk
     panel = decoder_cam
 
 
 ;   Tuareg Setup
-
 dialog = tuareg_setup_triggers, "Triggers", yAxis
 
     field = "Trigger advance B2", TuaregSetupCrkPosTbl_B2
@@ -1283,8 +1288,11 @@ dialog = ignition_setup, "Ignition Setup"
 
 dialog = fueling_setup_ae_legacy_accel, "acceleration", yAxis
 
-    field = "TPS rate for AE", FuelingSetupAccelCompThresTPS
-    field = "MAP rate for AE", FuelingSetupAccelCompThresMAP
+    field = "MAP/TPS rate switching threshold", FuelingSetupAccelCompThresRpm
+    field = "MAP rate for AE at low rpm", FuelingSetupAccelCompThresMAPlow
+    field = "MAP rate for AE", FuelingSetupAccelCompThresMAPhigh
+    field = "TPS rate for AE at low rpm", FuelingSetupAccelCompThresTPSlow
+    field = "TPS rate for AE", FuelingSetupAccelCompThresTPShigh
 
     field = "rpm based scaling threshold", FuelingSetupAccelCompScalingThresRpm
     field = "rpm based scaling end", FuelingSetupAccelCompScalingMaxRpm
